--- a/collage.html
+++ b/collage.html
@@ -120,7 +120,7 @@
 
 <main>
     <div class="collage-wrapper" style="width:1000px; height:800px; max-width:100%; margin:0 auto;">
-        <img src="images/collagee.jpg" usemap="#image-map" alt="Five Places I Wanted To Visit" style="width:100%; height:100%; display:block;">
+        <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Five Places I Wanted To Visit" style="width:100%; height:100%; display:block;">
         <map name="image-map">
             <area target="_blank" alt="japan" title="japan" href="" coords="74,170,388,577" shape="rect">
             <area target="_blank" alt="china" title="china" href="" coords="676,421,693,658,886,656,886,399,786,288,721,355" shape="poly">
@@ -143,3 +143,4 @@
 
 </body>
 </html>
+
