--- a/collage.html
+++ b/collage.html
@@ -119,14 +119,14 @@
 </header>
 
 <main>
-    <div class="collage-wrapper" style="width:1000px; height:800px; max-width:100%; margin:0 auto;">
-        <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Five Places I Wanted To Visit" style="width:100%; height:100%; display:block;">
+    <div class="collage-wrapper" style="width:1000px; max-width:100%; margin:0 auto;">
+        <img src="images/collage.jpg" usemap="#image-map" alt="Dream Places Collage" style="width:100%; height:auto; display:block;">
         <map name="image-map">
-            <area target="_blank" alt="japan" title="japan" href="" coords="74,170,388,577" shape="rect">
-            <area target="_blank" alt="china" title="china" href="" coords="676,421,693,658,886,656,886,399,786,288,721,355" shape="poly">
-            <area target="_blank" alt="spain" title="spain" href="" coords="971,483,1165,657" shape="rect">
-            <area target="_blank" alt="rome" title="rome" href="" coords="905,96,71" shape="circle">
-            <area target="_blank" alt="paris" title="paris" href="" coords="1047,215,1081,343,1018,347" shape="poly">
+            <area target="_blank" alt="japan" title="japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="391,434,733,852" shape="rect">
+            <area target="_blank" alt="china" title="china" href="https://en.wikipedia.org/wiki/AAAAA_Tourist_Attractions_of_China" coords="993,934,1103,934,1213,935,1203,624,1103,588,989,663,991,896" shape="poly">
+            <area target="_blank" alt="rome" title="rome" href="https://en.wikipedia.org/wiki/Colosseum" coords="1245,391,66" shape="circle">
+            <area target="_blank" alt="paris" title="paris" href="https://en.wikipedia.org/wiki/Paris" coords="1370,486,1343,637,1407,636" shape="poly">
+            <area target="_blank" alt="spain" title="spain" href="https://en.wikipedia.org/wiki/Barcelona" coords="1294,761,1489,946" shape="rect">
         </map>
     </div>
 </main>
@@ -143,4 +143,5 @@
 
 </body>
 </html>
+
 
