--- a/collage.html
+++ b/collage.html
@@ -120,7 +120,7 @@
 
 <main>
     <div class="collage-wrapper" style="width:1000px; max-width:100%; margin:0 auto;">
-        <img src="images/collage.jpg" usemap="#image-map" alt="Dream Places Collage" style="width:100%; height:auto; display:block;">
+        <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage" style="width:100%; height:auto; display:block;">
         <map name="image-map">
             <area target="_blank" alt="japan" title="japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="391,434,733,852" shape="rect">
             <area target="_blank" alt="china" title="china" href="https://en.wikipedia.org/wiki/AAAAA_Tourist_Attractions_of_China" coords="993,934,1103,934,1213,935,1203,624,1103,588,989,663,991,896" shape="poly">
@@ -143,5 +143,6 @@
 
 </body>
 </html>
+
 
 
