--- a/collage.html
+++ b/collage.html
@@ -119,7 +119,7 @@
 </header>
 
 <main>
-    <div class="collage-wrapper" style="width:1000px; max-width:100%; margin:0 auto;">
+    <div class="collage-wrapper" style="max-width:1000px; width:100%; margin:0 auto;">
         <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage" style="width:100%; height:auto; display:block;">
         <map name="image-map">
             <area target="_blank" alt="japan" title="japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="391,434,733,852" shape="rect">
@@ -129,6 +129,15 @@
             <area target="_blank" alt="spain" title="spain" href="https://en.wikipedia.org/wiki/Barcelona" coords="1294,761,1489,946" shape="rect">
         </map>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof imageMapResize === 'function') {
+                imageMapResize();
+            }
+        });
+    </script>
 </main>
 
 <footer>
@@ -143,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
