--- a/collage.html
+++ b/collage.html
@@ -75,7 +75,7 @@
         }
 
         .collage-wrapper {
-            width: 1000px; /* original screenshot width */
+            width: 1000px;
             max-width: 100%;
             margin: 0 auto;
             padding: 0;
@@ -84,7 +84,7 @@
         .collage-wrapper img {
             display: block;
             width: 100%;
-            height: auto; /* preserves aspect ratio, no vertical stretch */
+            height: auto;
             margin: 0;
         }
 
@@ -131,20 +131,19 @@
         <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
 
         <map name="image-map">
-            <!-- Coordinates nudged slightly left to fix right shift -->
-            <area target="_blank" alt="japan" title="japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="67,106,381,513" shape="rect">
-            <area target="_blank" alt="china" title="china" href="https://en.wikipedia.org/wiki/AAAAA_Tourist_Attractions_of_China" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
-            <area target="_blank" alt="spain" title="spain" href="https://en.wikipedia.org/wiki/Barcelona" coords="953,478,1147,652" shape="rect">
-            <area target="_blank" alt="rome" title="rome" href="https://en.wikipedia.org/wiki/Colosseum" coords="860,88,71" shape="circle">
-            <area target="_blank" alt="paris" title="paris" href="https://en.wikipedia.org/wiki/Paris" coords="1036,213,1070,341,1007,345" shape="poly">
+            <area target="_blank" alt="japan" title="Shibuya, Japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="67,106,381,513" shape="rect">
+            <area target="_blank" alt="china" title="Hangzhou, China" href="https://en.wikipedia.org/wiki/AAAAA_Tourist_Attractions_of_China" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
+            <area target="_blank" alt="spain" title="Barcelona, Spain" href="https://en.wikipedia.org/wiki/Barcelona" coords="953,478,1147,652" shape="rect">
+            <area target="_blank" alt="rome" title="Rome, Italy" href="https://en.wikipedia.org/wiki/Colosseum" coords="860,88,71" shape="circle">
+            <area target="_blank" alt="paris" title="Paris, France" href="https://en.wikipedia.org/wiki/Paris" coords="1036,213,1070,341,1007,345" shape="poly">
         </map>
     </div>
 
-    <!-- Responsive image map script -->
+    <!-- (need q) map script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            imageMapResize(); // ensures clickable areas scale with image
+            imageMapResize();
         });
     </script>
 </main>
@@ -161,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
