--- a/collage.html
+++ b/collage.html
@@ -49,6 +49,14 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
         }
 
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-size:2.8rem;
+            margin-bottom:2rem;
+            text-align:center;
+            color: var(--primary-red);
+        }
+
         nav {
             display: flex;
             justify-content: center;
@@ -125,7 +133,8 @@
         <a href="index.html#contacts">Contacts</a>
     </nav>
 </header>
-
+<h2>Dream Places To Visit</h2>
+    
 <main>
     <div class="collage-wrapper">
         <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
@@ -160,6 +169,7 @@
 
 </body>
 </html>
+
 
 
 
