--- a/collage.html
+++ b/collage.html
@@ -59,7 +59,7 @@
       
 
         .divider {
-            width: 1000px;
+            width: 1200px;
             margin: 10px auto 40px;
             border: none;
             border-top: 2px solid var(--primary-red);
@@ -156,7 +156,8 @@
             <area target="_blank" alt="paris" title="Paris, France" href="https://en.wikipedia.org/wiki/Paris" coords="1036,213,1070,341,1007,345" shape="poly">
         </map>
     </div>
-
+    <hr class="divider">
+  
     <!-- (need q) map script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
     <script>
@@ -178,4 +179,3 @@
 
 </body>
 </html>
-
