--- a/collage.html
+++ b/collage.html
@@ -149,7 +149,7 @@
         <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
 
         <map name="image-map">
-            <area target="_blank" alt="japan" title="Shibuya, Japan" href="https://en.wikipedia.org/wiki/Shibuya" coords="67,106,381,513" shape="rect">
+            <area target="_blank" alt="japan" title="Shibuya, Japan" href="japan.html" coords="67,106,381,513" shape="rect">
             <area target="_blank" alt="china" title="Hangzhou, China" href="https://en.wikipedia.org/wiki/AAAAA_Tourist_Attractions_of_China" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
             <area target="_blank" alt="spain" title="Barcelona, Spain" href="https://en.wikipedia.org/wiki/Barcelona" coords="953,478,1147,652" shape="rect">
             <area target="_blank" alt="rome" title="Rome, Italy" href="https://en.wikipedia.org/wiki/Colosseum" coords="860,88,71" shape="circle">
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
