--- a/japan.html
+++ b/japan.html
@@ -80,12 +80,13 @@
 
         .title-section h1 {
             font-family: 'Playfair Display', serif;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: var(--text-dark);
-            margin-bottom: 0.1rem;
+            margin-bottom: 0.3rem;
             text-align: left;
             display: inline-block;
-            margin-left: -120px;
+            position: relative;
+            left: -5vw; /* nudges left without breaking responsiveness */
         }
 
         .title-section h2 {
@@ -97,9 +98,8 @@
         }
 
         .divider {
-            width: 1000px;
-            max-width: 90%;
-            margin: 10px auto 40px;
+            width: 100%; /* full width */
+            margin: 2rem 0; /* equal spacing top & bottom */
             border: none;
             border-top: 2px solid var(--primary-red);
         }
@@ -109,26 +109,24 @@
             max-width: 90%;
             margin: 0 auto 3rem;
             font-size: 1.1rem;
-            line-height: 1.8;
+            line-height: 1.9;
             color: var(--text-dark);
+            text-align: justify;
         }
 
         .collage-wrapper {
-            width: 1000px;
-            max-width: 100%;
-            margin: 0 auto;
+            width: 600px; /* smaller than description */
+            max-width: 90%;
+            margin: 0 auto 3rem;
         }
 
-        .image-placeholder {
-            width: 100%;
-            height: 420px;
-            background-color: #DCDCD5;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-style: italic;
-            color: var(--muted-text);
-        }
+        .collage-image {
+    width: 100%;      /* fills the wrapper */
+    height: auto;     /* keeps original aspect ratio */
+    display: block;   /* removes inline spacing */
+    border-radius: 8px; /* optional, adds slight rounding */
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1); /* optional subtle shadow */
+}
 
         footer {
             background-color: #DCDCD5;
@@ -153,6 +151,18 @@
         .social-links a:hover {
             color: var(--primary-red);
         }
+
+        @media (max-width: 768px) {
+            .title-section h1 {
+                left: -3vw;
+            }
+            .collage-wrapper {
+                width: 90%;
+            }
+            .description {
+                width: 90%;
+            }
+        }
     </style>
 </head>
 
@@ -172,6 +182,7 @@
             <h1>Why I Want To Visit . . .</h1>
             <h2>Shibuya, Japan</h2>
         </div>
+
         <hr class="divider">
 
         <div class="description">
@@ -184,9 +195,8 @@
         </div>
 
         <div class="collage-wrapper">
-            <!-- Replace this div with your rectangular landscape collage photo -->
-            <div class="image-placeholder">
-                Your Rectangular Landscape Collage Photo Here
+            <div class="collage-wrapper">
+              <img src="images/collage/Japan.png" alt="Collage of Shibuya, Japan" class="collage-image">
             </div>
         </div>
 
