--- a/japan.html
+++ b/japan.html
@@ -181,7 +181,7 @@
         </div>
 
         <div class="collage-wrapper">
-            <img src="images/shibuya-collage.jpg" alt="Collage of Shibuya, Japan" class="collage-image">
+            <img src="images/collage/Japan.png" alt="Collage of Shibuya, Japan" class="collage-image">
         </div>
 
         <hr class="divider">
@@ -198,3 +198,4 @@
     </footer>
 </body>
 </html>
+
