--- a/japan.html
+++ b/japan.html
@@ -119,7 +119,7 @@
         }
 
         .collage-wrapper a {
-            text-decoration: none; /* removes underline if link */
+            text-decoration: none;
         }
 
         .collage-image {
@@ -192,7 +192,7 @@
         </div>
 
         <div class="collage-wrapper">
-            <a href="gallery.html">
+            <a href="images/collage/Japan.png" target="_blank">
                 <img src="images/collage/Japan.png" alt="Collage of Shibuya, Japan" class="collage-image">
             </a>
         </div>
