--- a/japan.html
+++ b/japan.html
@@ -192,7 +192,7 @@
         </div>
 
         <div class="collage-wrapper">
-            <a href="images/collage/Japan.png" target="_blank">
+            <a href="images/collage/Japan.png" target="SameTab">
                 <img src="images/collage/Japan.png" alt="Collage of Shibuya, Japan" class="collage-image">
             </a>
         </div>
@@ -211,3 +211,4 @@
     </footer>
 </body>
 </html>
+
