--- a/china.html
+++ b/china.html
@@ -193,7 +193,7 @@
 
         <div class="collage-wrapper">
             <a href="images/collage/China.png" target="SameTab">
-                <img src="images/collage/Japan.png" alt="Collage of Huangzhou, China" class="collage-image">
+                <img src="images/collage/China.png" alt="Collage of Huangzhou, China" class="collage-image">
             </a>
         </div>
 
@@ -211,3 +211,4 @@
     </footer>
 </body>
 </html>
+
