--- a/italy.html
+++ b/italy.html
@@ -193,7 +193,7 @@
 
         <div class="collage-wrapper">
             <a href="images/collage/Italy.png" target="SameTab">
-                <img src="images/collage/Japan.png" alt="Collage of Rome, Italy" class="collage-image">
+                <img src="images/collage/Italy.png" alt="Collage of Rome, Italy" class="collage-image">
             </a>
         </div>
 
@@ -211,3 +211,4 @@
     </footer>
 </body>
 </html>
+
