--- a/collage.html
+++ b/collage.html
@@ -168,6 +168,7 @@
 
     <div class="divider"></div>
 
+    <!--- (need ko) script---->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -188,3 +189,4 @@
 
 </body>
 </html>
+
