--- a/collage.html
+++ b/collage.html
@@ -158,11 +158,11 @@
         <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
 
         <map name="image-map">
-            <area target="_blank" alt="japan" title="Shibuya, Japan" href="japan.html" coords="67,106,381,513" shape="rect">
-            <area target="_blank" alt="china" title="Hangzhou, China" href="china.html" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
-            <area target="_blank" alt="spain" title="Barcelona, Spain" href="spain.html" coords="953,478,1147,652" shape="rect">
-            <area target="_blank" alt="rome" title="Rome, Italy" href="italy.html" coords="860,88,71" shape="circle">
-            <area target="_blank" alt="paris" title="Paris, France" href="france.html" coords="1036,213,1070,341,1007,345" shape="poly">
+            <area alt="japan" title="Shibuya, Japan" href="japan.html" coords="67,106,381,513" shape="rect">
+            <area alt="china" title="Hangzhou, China" href="china.html" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
+            <area alt="spain" title="Barcelona, Spain" href="spain.html" coords="953,478,1147,652" shape="rect">
+            <area alt="rome" title="Rome, Italy" href="italy.html" coords="860,88,71" shape="circle">
+            <area alt="paris" title="Paris, France" href="france.html" coords="1036,213,1070,341,1007,345" shape="poly">
         </map>
     </div>
 
@@ -189,4 +189,5 @@
 
 </body>
 </html>
+
 
