--- a/collage.html
+++ b/collage.html
@@ -84,12 +84,21 @@
             text-align: center;
             font-style: italic;
             color: var(--muted-text);
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        .divider-top {
+            width: 100%;
+            height: 1.6px;
+            background-color: var(--border-line);
+            margin-top: 1.5rem;
+            margin-bottom: 3rem;
+            border-radius: 2px;
         }
 
         .divider {
             width: 100%;
-            height: 3px;
+            height: 1.8px;
             background-color: var(--border-line);
             margin: 3rem 0;
             border-radius: 2px;
@@ -139,55 +148,52 @@
 
 <body>
 
-<header>
-    <nav>
-        <a href="index.html#top">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="aboutme.html">Biography</a>
-        <a href="index.html#projects">Projects</a>
-        <a href="index.html#contacts">Contacts</a>
-    </nav>
-</header>
-    
-<main>
-    <h1>Dream Places To Visit</h1>
-    <p class="subtitle">My absolute top 5</p>
-    <div class="divider"></div>
-  
-    <div class="collage-wrapper">
-        <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
+    <header>
+        <nav>
+            <a href="index.html#top">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="aboutme.html">Biography</a>
+            <a href="index.html#projects">Projects</a>
+            <a href="index.html#contacts">Contacts</a>
+        </nav>
+    </header>
 
-        <map name="image-map">
-            <area alt="japan" title="Shibuya, Japan" href="japan.html" coords="67,106,381,513" shape="rect">
-            <area alt="china" title="Hangzhou, China" href="china.html" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
-            <area alt="spain" title="Barcelona, Spain" href="spain.html" coords="953,478,1147,652" shape="rect">
-            <area alt="rome" title="Rome, Italy" href="italy.html" coords="860,88,71" shape="circle">
-            <area alt="paris" title="Paris, France" href="france.html" coords="1036,213,1070,341,1007,345" shape="poly">
-        </map>
-    </div>
+    <main>
+        <h1>Dream Places To Visit</h1>
+        <p class="subtitle">My absolute top 5</p>
+        <div class="divider-top"></div>
 
-    <div class="divider"></div>
+        <div class="collage-wrapper">
+            <img src="images/collage/collagee.jpg" usemap="#image-map" alt="Dream Places Collage">
 
-    <!--- (need ko) script---->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            imageMapResize();
-        });
-    </script>
-</main>
+            <map name="image-map">
+                <area alt="japan" title="Shibuya, Japan" href="japan.html" coords="67,106,381,513" shape="rect">
+                <area alt="china" title="Hangzhou, China" href="china.html" coords="641,410,658,647,851,645,851,388,751,277,686,344" shape="poly">
+                <area alt="spain" title="Barcelona, Spain" href="spain.html" coords="953,478,1147,652" shape="rect">
+                <area alt="rome" title="Rome, Italy" href="italy.html" coords="860,88,71" shape="circle">
+                <area alt="paris" title="Paris, France" href="france.html" coords="1036,213,1070,341,1007,345" shape="poly">
+            </map>
+        </div>
 
-<footer>
-    <div class="social-links">
-        <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
-    </div>
-    <p>&copy; Cyril Libuton</p>
-</footer>
+        <div class="divider"></div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                imageMapResize();
+            });
+        </script>
+    </main>
+
+    <footer>
+        <div class="social-links">
+            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <p>&copy; Cyril Libuton</p>
+    </footer>
 
 </body>
 </html>
-
-
