--- a/japan.html
+++ b/japan.html
@@ -184,10 +184,11 @@
 
         <div class="description">
             <p>
-                I have always dreamed of visiting Japan because of its beautiful balance between tradition and modern life.
-                I want to walk under cherry blossoms, explore peaceful temples, and experience the energy of its bright cities.
-                The culture, the food, and the scenery all feel inspiring to me.
-                Visiting Japan would not just be a trip, but a meaningful experience I would always remember.
+                Shibuya, Japan is definitely one of my top two must-visit places, especially the rural areas.  
+                I find Japan’s countryside incredibly peaceful—even the cities are calm—but it definitely feels different with the forests, mountains, lakes, and oceans.  
+                It’s so peaceful, and everyone is so respectful.  
+                It’s a perfect place to unwind and simply admire nature.  
+                Aside from the sense of peace, visiting Japan is also on my bucket list, and hopefully I’ll get to experience it soon.
             </p>
         </div>
 
@@ -211,4 +212,5 @@
     </footer>
 </body>
 </html>
+
 
