--- a/japan.html
+++ b/japan.html
@@ -185,7 +185,7 @@
         <div class="description">
             <p>
                 Shibuya, Japan is definitely one of my top two must-visit places, especially the rural areas.  
-                I find Japan’s countryside incredibly peaceful—even the cities are calm—but it definitely feels different with the forests, mountains, lakes, and oceans.  
+                I find Japan’s countryside incredibly peaceful, even the cities are calm but it definitely feels different with the forests, mountains, lakes, and oceans.  
                 It’s so peaceful, and everyone is so respectful.  
                 It’s a perfect place to unwind and simply admire nature.  
                 Aside from the sense of peace, visiting Japan is also on my bucket list, and hopefully I’ll get to experience it soon.
@@ -212,5 +212,6 @@
     </footer>
 </body>
 </html>
+
 
 
