--- a/france.html
+++ b/france.html
@@ -184,10 +184,11 @@
 
         <div class="description">
             <p>
-                I have always dreamed of visiting Japan because of its beautiful balance between tradition and modern life.
-                I want to walk under cherry blossoms, explore peaceful temples, and experience the energy of its bright cities.
-                The culture, the food, and the scenery all feel inspiring to me.
-                Visiting Japan would not just be a trip, but a meaningful experience I would always remember.
+                Paris, France, the City of Love.  
+                It's not really on my bucket list, but it would definitely be awesome if I get to visit one day.  
+                Aside from the Eiffel Tower, I look forward to the restaurants and bike rides, I mean how could you not?  
+                And the flowers, definitely the flowers.  
+                I surely hope I get to visit France with my mom and my partner one day!
             </p>
         </div>
 
@@ -211,4 +212,5 @@
     </footer>
 </body>
 </html>
+
 
