--- a/italy.html
+++ b/italy.html
@@ -184,11 +184,10 @@
 
         <div class="description">
             <p>
-                Paris, France, the City of Love.  
-                It's not really on my bucket list, but it would definitely be awesome if I get to visit one day.  
-                Aside from the Eiffel Tower, I look forward to the restaurants and bike rides, I mean how could you not?  
-                And the flowers, definitely the flowers.  
-                I surely hope I get to visit France with my mom and my partner one day!
+                The Colosseum in Rome, Italy is also such an interesting place to visit.  
+                If I get to visit, I would go for the Colosseum, the wishing well, which is known to make all dreams come true by the way! and the pizzas.  
+                Italy has cool restaurants as well, and trying as much food as possible is my goal if I ever get to visit.  
+                And of course, I can’t forget the wishing well!
             </p>
         </div>
 
@@ -212,5 +211,6 @@
     </footer>
 </body>
 </html>
+
 
 
