--- a/china.html
+++ b/china.html
@@ -184,10 +184,10 @@
 
         <div class="description">
             <p>
-                I have always dreamed of visiting Japan because of its beautiful balance between tradition and modern life.
-                I want to walk under cherry blossoms, explore peaceful temples, and experience the energy of its bright cities.
-                The culture, the food, and the scenery all feel inspiring to me.
-                Visiting Japan would not just be a trip, but a meaningful experience I would always remember.
+                China is my top choice among the five and definitely number one on my bucket list as well.  
+                Aside from being fascinated by the idea of visiting China, I also have plans to live there.  
+                Ever since I was a kid, I’ve always known I wanted to live there: to see my other relatives and to visit ancient places and learn their stories.  
+                I don’t just hope; I dream and manifest that I will visit or even better, live in—China when I’m capable and stable enough to do so.
             </p>
         </div>
 
@@ -211,4 +211,5 @@
     </footer>
 </body>
 </html>
+
 
