--- a/spain.html
+++ b/spain.html
@@ -184,10 +184,9 @@
 
         <div class="description">
             <p>
-                I have always dreamed of visiting Japan because of its beautiful balance between tradition and modern life.
-                I want to walk under cherry blossoms, explore peaceful temples, and experience the energy of its bright cities.
-                The culture, the food, and the scenery all feel inspiring to me.
-                Visiting Japan would not just be a trip, but a meaningful experience I would always remember.
+                The movie "Barcelona" by KathNiel is probably one of the reasons why I want to visit this place.  
+                They did not fail to capture the beauty of the country in the film, doing really well in highlighting tourist spots as well as the brief historical stories of certain places.  
+                Just from the movie itself, Barcelona seems like a dreamy place, and if I get to visit, I’ll feel so lucky to be able to experience it.
             </p>
         </div>
 
@@ -211,3 +210,4 @@
     </footer>
 </body>
 </html>
+
